Add /register endpoint
