# app/models/user.go
@@ -1,0 +1,12 @@
+package models
+
+type User struct {
+	ID           int
+	Username     string
+	PasswordHash string
+}
+
+type UserOut struct {
+	ID       int    `json:"id"`
+	Username string `json:"username"`
+}
